syntax = "proto3";

package sync;
option go_package = "pb";


message FetchBlockReq {
      uint32 Id = 1;
}


message FetchBlockResp {
    uint32 Id = 1;
    Block block = 3;
}


message LayerHashReq {
      uint32 layer = 1;
}


message LayerHashResp {
    bytes hash = 1;
}


message LayerIdsReq {
      uint32 layer = 1;
}


message LayerIdsResp {
   repeated  uint32 ids = 1;
}



message Block {
     uint32 Id = 1;
     uint32 layer = 2;
     repeated uint32 VisibleMesh = 3;
}
